# anchor-automated-vault

./: .gitignore  README.md  package-lock.json
program/: Anchor.toml  package-lock.json  package.json
program/programs/automated_vault/: Cargo.toml
program/programs/automated_vault/src/: error.rs  id.rs  lib.rs
program/programs/automated_vault/src/state/: vault.rs
program/tests/: automated_vault.ts
programs/automated_vault/src/: error.rs  lib.rs
tests/: automated_vault.ts
