[package]
name = "automated_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "automated_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = "0.28.0"
# anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
# getrandom = { version = "0.2.2", features = ["custom"] }
# anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"]}
# anchor-spl = { git = "https://github.com/coral-xyz/anchor.git"}
# clockwork-sdk = "1.4.2"

anchor-lang = { version = "0.28.0", features = ["init-if-needed"]}
clockwork-sdk = { version = "=2.0.18" }
solana-program = "=1.14.16"