[package]
name = "automated_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "automated_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
clockwork-sdk = "2.0.17"
anchor-lang ={version="0.27.0",  features = ["init-if-needed"]}
solana-program = "=1.14.17"